--- a/index.html
+++ b/index.html
@@ -87,10 +87,11 @@
             <div id="basic-details">
                 <p><b>So are you curious about what going Vegan means?</b><br/>
                      If you are you are in the right place<br/>
-                     We live in a world that is vastly different from our ancestors, the modern world bombards us with advertisements, 
-                      fast foods, easy fixes and the routes to eutopia, yet at the same time it removes us from what really happens to our food, 
-                      the additives affecting our health, the impact to our environment and the cost to the animals we eat.<br/>
-                    Let’s make the world a better place to live one step at a time 
+                    We live in a world that is vastly different from our ancestors, 
+                    the modern world bombards us with advertisements, fast foods, easy fixes and the easy path to utopia. 
+                    Yet at the same time it removes us from what really happens to our food, the additives affecting our health, 
+                    the impact to our environment and the cost to the animals we eat.
+
                       <br/>  
                       <br/>
                       </p>
