--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     />
    
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Lets Go Vegan</title>
+    <title>Home | Lets Go Vegan</title>
      <link rel="shortcut icon" type="image/png" href="favicon.png">
   </head>
   <body>
