--- a/whyvegan.html
+++ b/whyvegan.html
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <title>Lets Go Vegan</title>
+    <title>Why | Lets Go Vegan</title>
     <link rel="shortcut icon" type="image/png" href="favicon.png">
   </head>
   <body>
