--- a/food.html
+++ b/food.html
@@ -16,7 +16,7 @@
     />
       <link rel="stylesheet" href="assets/css/style.css" />
     <title>Recipes | Lets Go Vegan</title>
-     <link rel="shortcut icon" type="image/png" href="favicon.png">
+     <link rel="shortcut icon" type="image/png" href="/assets/images/favicon.png">
   </head>
   <body>
     <!--------------------------- Header Section including logo and Navigation -->
