--- a/challenge.html
+++ b/challenge.html
@@ -74,44 +74,45 @@
 <!--------------------------- Main section - middle of page -->
     <section class="container-fluid" id="frog-outer">
         <div id="frog-pic">
-        <div class="row">
-        <div class="col-sm-6 ml-sm-auto">
-            <form class="signup-form">
-                <h2>Challenge Sign-Up</h2>
-                     <label for="fname">
-                         <input class="text-input" id="fname" type="text" placeholder="First Name" name="first_name" required>
-                    </label>
-                    <br/>
-                    <label for="lname">
-                        <input class="text-input" id="lname" type="text" placeholder="Last Name" name="last_name" required>
-                    </label>
-                    <br/>
-                    <label for="email">
-                        <input class="text-input" id="email" type="email" placeholder="Email Address" name="email_address" required>
-                    </label>
-                    <br/>
-                    <label for="cemail"> 
-                        <input class="text-input" id="cemail" type="email" placeholder="Confirm Email Address" name="cemail_address" required>
-                    </label>
-                    <br/>
-                    <label class="comm-option" for="date">Challange Start Date</label>
-                    <br/>
-                    <input class="text-input support-option" id="sdate" type="date" name="start_date" required>
-                    <br/>
-              <!-- Drop Down Selection for form --> 
-                    <label class="comm-option" for="daily">How Often Can we Contact You</label>
-                    <br/>
-                    <select class="text-input support-option" name="comlist" form="signup-form">
-                        <option value="daily">Daily Email Support</option>
-                        <option value="weekly">Weekly Email Support</option>
-                        <option value="none">No Support Required</option>
-                    </select>
-                    <br/>
-                    <br/>
-                    <input class="join-button" type="submit" value="Lets Begin">
-            </form>
+            <div class="row">
+                <div class="col-md-6 ml-md-auto">
+                    <form class="signup-form">
+                        <h2>Challenge Sign-Up</h2>
+                        <!-- Label wrap for better spacing -->
+                        <label for="fname">
+                            <input class="text-input" id="fname" type="text" placeholder="First Name" name="first_name" required>
+                        </label>
+                        <br/>
+                        <label for="lname">
+                            <input class="text-input" id="lname" type="text" placeholder="Last Name" name="last_name" required>
+                        </label>
+                        <br/>
+                        <label for="email">
+                            <input class="text-input" id="email" type="email" placeholder="Email Address" name="email_address" required>
+                        </label>
+                        <br/>
+                        <label for="cemail"> 
+                            <input class="text-input" id="cemail" type="email" placeholder="Confirm Email Address" name="cemail_address" required>
+                        </label>
+                        <br/>
+                        <label class="comm-option" for="date">Challange Start Date</label>
+                        <br/>
+                        <input class="text-input support-option" id="sdate" type="date" name="start_date" required>
+                        <br/>
+                        <!-- Drop Down Selection for form --> 
+                        <label class="comm-option" for="daily">How Often Can we Contact You</label>
+                        <br/>
+                        <select class="text-input support-option" name="comlist" form="signup-form">
+                            <option value="daily">Daily Email Support</option>
+                            <option value="weekly">Weekly Email Support</option>
+                            <option value="none">No Support Required</option>
+                        </select>
+                        <br/>
+                        <br/>
+                        <input class="join-button" type="submit" value="Lets Begin">
+                    </form>
+                </div>
             </div>
-        </div>
         </div>
    </section> 
   
