--- a/index.html
+++ b/index.html
@@ -83,15 +83,17 @@
         <div class="d-flex justify-content-center flex-column" >
             <div id="basic-details">
                 <p><b>So are you curious about what going Vegan means?</b><br/>
-                     If you are you are in the right place<br/>
+                    If you are, you are in the right place.<br/>
                     We live in a world that is vastly different from our ancestors, 
-                    the modern world bombards us with advertisements, fast foods, easy fixes and the easy path to utopia. 
+                    the modern world bombards us with advertisements, fast foods, quick fixes and the easy path to utopia. 
                     Yet at the same time it removes us from what really happens to our food, the additives affecting our health, 
                     the impact to our environment and the cost to the animals we eat.
-
-                      <br/>  
-                      <br/>
-                      </p>
+                    <br/>
+                    People in all walks of life are going vegan, for the animals, for the environment, for their health. 
+                    Whatever your reason for considering the vegan lifestyle, we can all do our part in improving the world we live in.  
+                    <br/>  
+                    <br/>
+                    </p>
                 </div>
             <div id="center-btn">
                 <a class="btn btn-sm" id="ready-btn" href="challenge.html" role="button">Ready to Start</a>
