--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <!-- set text and button below the picture-->
         <div class="d-flex justify-content-center flex-column" >
             <div id="basic-details">
-                <p><b>So are you curious about what going Vegan means?</b><br/>
+                <p><b>So are you curious about what going Vegan means?</b><br/><br/>
                     If you are, you are in the right place.<br/>
                     We live in a world that is vastly different from our ancestors, 
                     the modern world bombards us with advertisements, fast foods, quick fixes and the easy path to utopia. 
