--- a/whyvegan.html
+++ b/whyvegan.html
@@ -81,10 +81,28 @@
                     <div class="py-2"><h3>For the Animals</h3></div>
                     <div class="py-2 why-text">
                         <p class="text-overflow">
-                            Let me ask you a simple question, why do we eat a pig but love a dog? <br/>
-                            What makes a horse a pet yet a sheep is a commodity?<br/>
+                            Let me ask you a simple question, why do we eat a pig but love a dog? 
+                            <br/>
+                            What makes a horse a pet yet a sheep is a commodity?
+                            <br/>
                             Animals are sentient beings, they feel joy and pain, they protect their young and feel 
-                            loss when their babies are taken away from them
+                            oss when their babies are taken away from them.  We will spend all our money on making our pets comfortable 
+                            and we are outraged when anyone hurts a pet, yet research has shown that a pig is more intelligent than 
+                            a dog and a cow will call for her baby and search for days, when it's taken away from her. 
+                            <br/>
+                            The animal industry, through advertising, makes us think that the animals are happy, 
+                            but many live a short and miserable life, they are bred to be too big, to lay more eggs, 
+                            to produce more milk, all of this is detrimental to the animals health.
+                            <br/>
+                            Many people say our animals are killed humanely, yet my personal response is “ if a serial killer gives you for example a drug, 
+                            to kill you, do we as a society really think that would be ok? We are not feeling pain? So can they kill us 
+                            ecause they feel a physiological need to kill?”
+                            <br/>
+                            If you would like to do some of your own research, I love these 2 guys for their calm approach and 
+                            their message and debunking of many of the industry's myths. 
+                            <br/>
+                            Earling Ed and Mick the Vegan
+                            <br/>
                         </p>
                     </div>
                 </div>
