--- a/food.html
+++ b/food.html
@@ -77,7 +77,9 @@
             <div class="col-md-4 food-pic"></div>
             <div class="col-md-8">
                 <div class="row">
-                    <a href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2 class="recipe-h2 col-12">Mango Chia Pudding</h2></a>
+                    <div class="col-12"  >
+                        <a href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2 class="col-12">Mango Chia Pudding</h2></a>
+                    </div>
                     <div class="col-12 food-text">
                         <p>Simple to make and perfect to take to work</p>
                     </div>
