--- a/food.html
+++ b/food.html
@@ -78,7 +78,7 @@
             <div class="col-md-8">
                 <div class="row">
                     <div class="col-12"  >
-                        <a href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2 class="col-12">Mango Chia Pudding</h2></a>
+                        <a id="recipe-title" href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2 class="col-12">Mango Chia Pudding</h2></a>
                     </div>
                     <div class="col-12 food-text">
                         <p>Simple to make and perfect to take to work</p>
