--- a/food.html
+++ b/food.html
@@ -74,7 +74,9 @@
     <!--------------------------- Main section - middle of page -->
      <section class="container-fluid">
      <div class="row recipe-row"> <!-- Mango Chia Pudding -->
-            <div class="col-md-4 food-pic"></div>
+            <div class="col-md-4">
+                <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="mango chia pudding" />
+            </div>
             <div class="col-md-8">
                 <div class="row">
                     <div class="col-12"  >
