--- a/food.html
+++ b/food.html
@@ -73,11 +73,12 @@
     </header>
     <!--------------------------- Main section - middle of page -->
      <section class="container-fluid">
+     <!-- Row contains 2 recipes on larger screen -->
      <div class="row recipe-row"> 
             <div class="col-md-6"><!-- Mango Chia Pudding -->
                 <div class="row"> 
                     <div class="col-md-4">
-                      <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="mango chia pudding" />
+                        <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="mango chia pudding" />
                     </div>
                     <div class="col-md-8">
                         <a class="recipe-title" href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2 class="col-12">Mango Chia Pudding</h2></a>    
@@ -90,7 +91,7 @@
             <div class="col-md-6"><!-- Mango Chia Pudding -->
                 <div class="row"> 
                     <div class="col-md-4">
-                      <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="mango chia pudding" />
+                        <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="mango chia pudding" />
                     </div>
                     <div class="col-md-8">
                         <a class="recipe-title" href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2 class="col-12">Mango Chia Pudding</h2></a>    
@@ -101,7 +102,35 @@
                 </div>
             </div>
         </div>
-
+<!-- Row contains 2 recipes on larger screen -->
+     <div class="row recipe-row"> 
+            <div class="col-md-6"><!-- Mango Chia Pudding -->
+                <div class="row"> 
+                    <div class="col-md-4">
+                        <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="mango chia pudding" />
+                    </div>
+                    <div class="col-md-8">
+                        <a class="recipe-title" href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2 class="col-12">Mango Chia Pudding</h2></a>    
+                        <div class="food-text">
+                            <p>Simple to make and perfect to take to work</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6"><!-- Mango Chia Pudding -->
+                <div class="row"> 
+                    <div class="col-md-4">
+                        <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="mango chia pudding" />
+                    </div>
+                    <div class="col-md-8">
+                        <a class="recipe-title" href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2 class="col-12">Mango Chia Pudding</h2></a>    
+                        <div class="food-text">
+                            <p>Simple to make and perfect to take to work</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     
