--- a/food.html
+++ b/food.html
@@ -80,7 +80,7 @@
                     <div class="col-md-4">
                         <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="mango chia pudding" />
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-8 align-self-center">
                         <a href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2>Mango Chia Pudding</h2></a>    
                         <div class="food-text">
                             <p>Simple to make and perfect to take to work</p>
@@ -93,7 +93,7 @@
                     <div class="col-md-4">
                         <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="mango chia pudding" />
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-8  align-self-center">
                         <a href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2>Mango Chia Pudding</h2></a>    
                         <div class="food-text">
                             <p>Simple to make and perfect to take to work</p>
@@ -109,7 +109,7 @@
                     <div class="col-md-4">
                         <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="mango chia pudding" />
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-8 align-self-center">
                         <a href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2>Mango Chia Pudding</h2></a>    
                         <div class="food-text">
                             <p>Simple to make and perfect to take to work</p>
@@ -122,7 +122,7 @@
                     <div class="col-md-4">
                         <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="mango chia pudding" />
                     </div>
-                    <div class="col-md-8">
+                    <div class="col-md-8  align-self-center">
                         <a href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2>Mango Chia Pudding</h2></a>    
                         <div class="food-text">
                             <p>Simple to make and perfect to take to work</p>
