--- a/food.html
+++ b/food.html
@@ -117,15 +117,15 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6"><!-- Mango Chia Pudding -->
+            <div class="col-md-6"><!-- Sun-dried Tomato Pesto Hummus -->
                 <div class="row"> 
                     <div class="col-md-4">
-                        <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="mango chia pudding" />
+                        <img class="food-pic" src="assets/images/sundried-tomato-pesto-internet.jpg" alt="Sun-dried Tomato Pesto Hummus" />
                     </div>
                     <div class="col-md-8  align-self-center">
-                        <a href="/assets/recipes/mango-chia-pudding.pdf" target="_blank"><h2>Mango Chia Pudding</h2></a>    
+                        <a href="/assets/recipes/sun-dried-tomato-pesto.pdf" target="_blank"><h2>Sun-dried Tomato Pesto Hummus</h2></a>    
                         <div class="food-text">
-                            <p>Simple to make and perfect to take to work</p>
+                            <p>This pesto hummus can be served on a sandwich over pasta or with a beautuful salad</p>
                         </div>
                     </div>
                 </div>
