--- a/food.html
+++ b/food.html
@@ -96,7 +96,7 @@
                     <div class="col-md-8  align-self-center">
                         <a href="/assets/recipes/pancakes.pdf" target="_blank"><h2>Pancakes</h2></a>    
                         <div class="food-text">
-                            <p>For that luxury feeling that no way is this vegan!!!!</p>
+                            <p>For that luxury feeling that <em>no way is this vegan!!!!</em></p>
                         </div>
                     </div>
                 </div>
@@ -146,15 +146,15 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6"><!-- Sun-dried Tomato Pesto Hummus -->
+            <div class="col-md-6"><!-- Tso Tofu -->
                 <div class="row"> 
                     <div class="col-md-4">
-                        <img class="food-pic" src="assets/images/sundried-tomato-pesto-internet.jpg" alt="Sun-dried Tomato Pesto Hummus" />
+                        <img class="food-pic" src="assets/images/tso-tofu-internet.jpg" alt="Tso Tofu" />
                     </div>
                     <div class="col-md-8  align-self-center">
-                        <a href="/assets/recipes/sun-dried-tomato-pesto.pdf" target="_blank"><h2>Sun-dried Tomato Pesto Hummus</h2></a>    
+                        <a href="/assets/recipes/tso-tofu.pdf" target="_blank"><h2>Tso Tofu</h2></a>    
                         <div class="food-text">
-                            <p>This pesto hummus can be served on a sandwich over pasta or with a beautuful salad</p>
+                            <p>Tofu never tasted so good</p>
                         </div>
                     </div>
                 </div>
