--- a/food.html
+++ b/food.html
@@ -75,7 +75,7 @@
      <section class="container-fluid">
      <!-- Row contains 2 recipes on larger screen -->
      <div class="row recipe-row"> 
-            <div class="col-md-6"><!-- Mango Chia Pudding -->
+            <div class="col-lg-6"><!-- Mango Chia Pudding -->
                 <div class="row"> 
                     <div class="col-md-4">
                         <img class="food-pic" src="assets/images/chia-pudding-unsplash.jpg" alt="Mango Chia Pudding" />
@@ -88,7 +88,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6"><!-- Pancakes -->
+            <div class="col-lg-6"><!-- Pancakes -->
                 <div class="row"> 
                     <div class="col-md-4">
                         <img class="food-pic" src="assets/images/pancakes-pexels.jpg" alt="Pancakes" />
@@ -104,7 +104,7 @@
         </div>
 <!-- Row contains 2 recipes on larger screen -->
      <div class="row recipe-row"> 
-            <div class="col-md-6"><!-- Egg Salad Sandwich -->
+            <div class="col-lg-6"><!-- Egg Salad Sandwich -->
                 <div class="row"> 
                     <div class="col-md-4">
                         <img class="food-pic" src="assets/images/vegan-egg-internet.jpg" alt="Egg Salad Sandwich" />
@@ -117,7 +117,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6"><!-- Sun-dried Tomato Pesto Hummus -->
+            <div class="col-lg-6"><!-- Sun-dried Tomato Pesto Hummus -->
                 <div class="row"> 
                     <div class="col-md-4">
                         <img class="food-pic" src="assets/images/sundried-tomato-pesto-internet.jpg" alt="Sun-dried Tomato Pesto Hummus" />
@@ -133,7 +133,7 @@
         </div>
         <!-- Row contains 2 recipes on larger screen -->
      <div class="row recipe-row"> 
-            <div class="col-md-6"><!-- Roasted Aubergine & Chickpea Curry -->
+            <div class="col-lg-6"><!-- Roasted Aubergine & Chickpea Curry -->
                 <div class="row"> 
                     <div class="col-md-4">
                         <img class="food-pic" src="assets/images/aubergine-chickpea-internet.jpg" alt="Roasted Aubergine & Chickpea Curry" />
@@ -146,7 +146,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-md-6"><!-- Tso Tofu -->
+            <div class="col-lg-6"><!-- Tso Tofu -->
                 <div class="row"> 
                     <div class="col-md-4">
                         <img class="food-pic" src="assets/images/tso-tofu-internet.jpg" alt="Tso Tofu" />
